Fixed the div of the Form field to have better spacing between words

--- a/login/src/Pages/NameForm.css
+++ b/login/src/Pages/NameForm.css
@@ -7,3 +7,9 @@
     padding: 20px;
     margin: 20px;
 }
+
+.selfCheckTitle{
+    text-align:center;
+    padding: 20px;
+    margin: 20px;
+}
